actualizo foto y titulo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header class="bg-light p-3">
-        <h1 class="text-center">Driver and guided bilingual expeditions</h1>
+        <h1 class="text-center">Driver & Guided Expeditions</h1>
+        <h2 class="text-center">bilingual</h2>
         <nav>
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
