quito send message x email y whatsapp

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section id="contact" class="my-5">
             <h2>Contact Us</h2>
             <p>If you have any questions or would like to book a service, please reach out to us!</p>
-            <form action="#" method="post">
+            <!--<form action="#" method="post">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name:</label>
                     <input type="text" id="name" name="name" class="form-control" required>
@@ -55,9 +55,18 @@
                     <textarea id="message" name="message" class="form-control" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Send Message</button>
-            </form>
-        </section>
-    </main>
+            </form>-->
+
+    <div class="mt-3">
+        <a href="mailto:your-email@example.com" class="btn btn-info">
+            <i class="fas fa-envelope"></i> Send Email
+        </a>
+        <a href="https://wa.me/1234567890" class="btn btn-success" target="_blank">
+            <i class="fab fa-whatsapp"></i> Call on WhatsApp
+        </a>
+    </div>
+            </section>
+        </main>
 
     <footer class="footer text-faded text-center py-5">
         <div class="container">
