--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body>
     <header class="bg-light p-3">
         <h1 class="text-center">Driver & Guided Expeditions</h1>
-        <h2 class="text-center">bilingual</h2>
+        <h2 class="text-center">Culture & Adventure</h2>
         <nav>
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#packages">Packages</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -26,10 +27,12 @@
             <h2>Our Services</h2>
             <p>We offer bilingual transport and expedition guiding services to ensure you have the best experience exploring the great outdoors.</p>
             <ul>
+                <li>We speak English and Spanish</li>
                 <li>Transportation to various expedition locations</li>
                 <li>Bilingual guides fluent in English and Spanish</li>
                 <li>Customized expedition planning</li>
                 <li>Safety equipment and training</li>
+                <li>Professionally certified drivers and guides</li>
             </ul>
         </section>
 
@@ -60,8 +63,10 @@
     <div class="mt-3">
         <a href="mailto:your-email@example.com" class="btn btn-info">
             <i class="fas fa-envelope"></i> Send Email
-        </a>
-        <a href="https://wa.me/1234567890" class="btn btn-success" target="_blank">
+        </a> 
+        <br>
+        <br>
+        <a href="https://api.whatsapp.com/send?phone=50661213404" class="btn btn-success" target="_blank">
             <i class="fab fa-whatsapp"></i> Call on WhatsApp
         </a>
     </div>
