eliminandndo items repetido

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>Our Services</h2>
             <p>We offer bilingual transport and expedition guiding services to ensure you have the best experience exploring the great outdoors.</p>
             <ul>
-                <li>We speak English and Spanish</li>
+                <li>Enjoy the views, relax and seat back!</li>
                 <li>Transportation to various expedition locations</li>
                 <li>Bilingual guides fluent in English and Spanish</li>
                 <li>Customized expedition planning</li>
