--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             </ul>
         </nav>
     </header>
-
+    <br>
+    <br>        
     <main class="container my-5">
         <!-- Services Section -->
         <section id="services">
@@ -42,14 +43,16 @@
                 <li>Professionally certified drivers and guides</li>
             </ul>
         </section>
-
+        <br>
+        <br>    
           <!-- About Section -->
         <section id="about" class="my-5">
             <h2>About Us</h2>
             <p>Our team is passionate about adventure and committed to providing exceptional service. With years of experience in the field, we ensure that your expeditions are safe, enjoyable, and unforgettable.</p>
         </section>
 
-
+        <br>
+        <br>    
         <!-- Packages Section -->
         <section id="packages" class="my-5">
             <h2>Packages</h2>
@@ -62,21 +65,21 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="static/assets/img/test2b.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-block d-md-block">
                             <h5>Sunset Tours</h5>
                             <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="static/assets/img/test1.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-block d-md-block">
                             <h5>Ciy Tours</h5>
                             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="static/assets/img/bg1.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-block d-md-block">
                             <h5>Ocean Tours</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
@@ -93,7 +96,8 @@
             </div>
         </section>
 
-      
+        <br>
+        <br>    
         <!-- Contact Section -->
         <section id="contact" class="my-5">
             <h2>Contact Us</h2>
