--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
           <!-- About Section -->
         <section id="about" class="my-5">
             <h2>About Us</h2>
-            <p>Our team is passionate about adventure and committed to providing exceptional service. With years of experience in the field, we ensure that your expeditions are safe, enjoyable, and unforgettable.</p>
+            <p>More than transportation. An experience with purpose.  
+We are a family native to Monteverde, Costa Rica, who has grown up surrounded by nature, mountains, and tradition. Our project is born from a love for this land and a desire to share with visitors the beauty, culture, and authentic essence of our country.  
+We believe that traveling is not just about moving from one place to another, but about living meaningful experiences, connecting with the environment, and supporting those who care for the territory. That’s why every service we offer is based on respect for nature and a strong commitment to sustainability and environmental education.  
+We want every person who travels with us to take away more than just photos: to discover the history, flavors, biodiversity, and spirit of Costa Rica, accompanied by people who truly know and love this place.  
+With us, you will not only discover destinations; you will be part of an authentic, safe, and meaningful experience.  
+Here, you don’t just travel through Costa Rica; you travel with those who live it. Let us accompany you, show you its paths, and tell you its secrets, from the heart of the forest that saw us grow.
+.</p>
         </section>
 
         <br>
@@ -64,24 +70,24 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="static/assets/img/test2b.jpg" class="d-block w-100" alt="...">
+                        <img src="static/assets/img/montview.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-block d-md-block">
-                            <h5>Sunset Tours</h5>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+                            <h5>Monteverde – El Cairo Ecological Park</h5>
+                            <p>see details here!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="static/assets/img/test1.jpg" class="d-block w-100" alt="...">
+                        <img src="static/assets/img/fordvanjef.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-block d-md-block">
-                            <h5>Ciy Tours</h5>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                            <h5>Birdwatching Expedition: From Monteverde to El Cairo Ecological Parks</h5>
+                            <p>see details here!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="static/assets/img/bg1.jpg" class="d-block w-100" alt="...">
+                        <img src="static/assets/img/bg.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-block d-md-block">
-                            <h5>Ocean Tours</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <h5>One-Day Tour: Monteverde – El Cairo Ecological Park</h5>
+                            <p>see details here!</p>
                         </div>
                     </div>
                 </div>
