actualizo aventura y cultura y botones

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="bg-light p-3">
         <h1 class="text-center">Driver & Guided Expeditions</h1>
-        <h2 class="text-center">Culture & Adventure</h2>
+        <h2 class="text-center" style="color: rgb(6, 6, 41);">Culture & Adventure</h2>
         <nav>
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a class="nav-link" href="#services" aria-label="Services Section">Services</a></li
@@ -73,21 +73,24 @@ Here, you don’t just travel through Costa Rica; you travel with those who live
                         <img src="static/assets/img/montview.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-block d-md-block">
                             <h5>Monteverde – El Cairo Ecological Park</h5>
-                            <p>see details here!</p>
+                            <a href="#monteverde-cairo" class="btn btn-primary">See details!</a>
+                            <p></p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="static/assets/img/fordvanjef.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-block d-md-block">
                             <h5>Birdwatching Expedition: From Monteverde to El Cairo Ecological Parks</h5>
-                            <p>see details here!</p>
+                            <a href="#birdwatching-expedition" class="btn btn-primary">See details!</a>
+                            <p></p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="static/assets/img/bg.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-block d-md-block">
                             <h5>One-Day Tour: Monteverde – El Cairo Ecological Park</h5>
-                            <p>see details here!</p>
+                            <a href="#tour-monteverde" class="btn btn-primary">See details!</a>
+                            <p></p>
                         </div>
                     </div>
                 </div>
