nuevos cambios en ocultar texto y agregamos seccion de destinos

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li class="nav-item"><a class="nav-link" href="#about" aria-label="About Us Section">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact" aria-label="Contact Us Section">Contact Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="#packages" aria-label="Packages Section">Packages</a></li>
+                <li class="nav-item"><a class="nav-link" href="#fromMonteverde" aria-label="Packages Section">Popular Destinations</a></li>
             </ul>
         </nav>
     </header>
@@ -51,11 +52,12 @@
         <section id="about" class="my-5 package-details">
             <h2 class="text-primary">About Us</h2>
             <p><strong>More than transportation. An experience with purpose.</strong></p>  
-            <p>We are a family native to Monteverde, Costa Rica, who has grown up surrounded by nature, mountains, and tradition. Our project is born from a love for this land and a desire to share with visitors the beauty, culture, and authentic essence of our country.</p>
-            <p>We believe that traveling is not just about moving from one place to another, but about living meaningful experiences, connecting with the environment, and supporting those who care for the territory. That's why every service we offer is based on respect for nature and a strong commitment to sustainability and environmental education.</p>
-            <p>We want every person who travels with us to take away more than just photos: to discover the history, flavors, biodiversity, and spirit of Costa Rica, accompanied by people who truly know and love this place.</p>
+            <p class="hidden-text">We are a family native to Monteverde, Costa Rica, who has grown up surrounded by nature, mountains, and tradition. Our project is born from a love for this land and a desire to share with visitors the beauty, culture, and authentic essence of our country.</p>
+            <p class="hidden-text">We believe that traveling is not just about moving from one place to another, but about living meaningful experiences, connecting with the environment, and supporting those who care for the territory. That's why every service we offer is based on respect for nature and a strong commitment to sustainability and environmental education.</p>
+            <p class="hidden-text">We want every person who travels with us to take away more than just photos: to discover the history, flavors, biodiversity, and spirit of Costa Rica, accompanied by people who truly know and love this place.</p>
             <p><em>Here, you don't just travel through Costa Rica; you travel with those who live it.</em></p>
         </section>
+
 
         <!-- Packages Section -->
         <section id="packages" class="my-5">
@@ -313,7 +315,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-text" style="color: black;">
-                                <strong>Duration:</strong> Flexible (1-7 days)<br>
+                                <strong>Duration:</strong> Flexible<br>
                                 <strong>Group Size:</strong> Max 10 people<br>
                                 <strong>Activity Level:</strong> Customizable
                             </p>
@@ -338,6 +340,16 @@
                 </div>
             </div>
         </section>
+
+        <!--destination Sections-->
+        <section id="fromMonteverde" class="my-5">
+            <h2>Popular Destinations from Monteverde</h2>
+            <p>Explore the best of Costa Rica with our recommended routes and destinations.</p>
+            <ul>
+                <li>To Manuel Antonio $</li>
+                <li>To Nosara $</li>
+                <li>To Dominical $</li>
+            </ul>
         
         <!-- Contact Section -->
         <section id="contact" class="my-5">
