trabajando en las habladas y distribucion

--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
                         <p>Immerse yourself in an authentic experience of connection with nature. This tour takes you from Monteverde to the El Castillo area (Arenal), where El Cairo Ecological Park is located.</p>
                         <div id="monteverde-description" class="hidden-content">
                             <p>You'll walk along shaded trails, listening to bird songs and enjoy a typical Costa Rican lunch in Pueblo Viejo de Arenal. This comprehensive day trip offers the perfect blend of nature exploration, cultural immersion, and adventure activities in one of Costa Rica's most biodiverse regions.</p>
+                            <p>You will literally have lunch in the heart of the forest.  
+                            No crowds, no noise, just living nature.  
+                            - Duration: Full day (7:00 a.m. – 5:00 p.m. approx.)  
+                            - Includes: Transportation (private or collective), bilingual naturalist guide, park entrance, lunch in the forest  
+                            - Modality: Regular private, deluxe, or collective (depending on availability)  
+                            - Ideal for: Travelers seeking peace, authentic contact with nature, and a distinct experience  
+</p>
+                        
                         </div>
                         <button class="toggle-btn" onclick="toggleContent('monteverde-description', this)">Read more</button>
                     </div>
@@ -205,6 +213,14 @@
                         <p>A bird route through three ecosystems in one day. This expedition allows you to observe the richness and variety of birds as the landscape changes.</p>
                         <div id="birdwatching-description" class="hidden-content">
                             <p>From the misty heights of Monteverde to the lower, wetter forests of the Arenal area, you'll experience diverse habitats that host over 200 bird species. Our expert guides will help you spot and identify various endemic and migratory birds while teaching you about their behaviors and ecological importance.</p>
+                            <p>Each area offers us a different community:  
+- Monteverde – cloud forest, birds adapted to cooler altitudes  
+- Transition – rural areas, secondary forests, crop edges  
+- Arenal – wet and rainy forest, birds of warmer climates and dense vegetation  
+This variety of habitats makes it possible to record a great diversity of species in a single day, something that would normally require several destinations.  
+The experience culminates in El Cairo Ecological Park, with a leisurely walk along trails surrounded by living nature, and we conclude with a traditional lunch served in the forest, where even during the meal, winged surprises may continue to appear.  
+Ideal for birdwatchers who want to make the most of their time, connecting different habitats, paths, and skies in a single day.  
+</p>
                         </div>
                         <button class="toggle-btn" onclick="toggleContent('birdwatching-description', this)">Read more</button>
                     </div>
@@ -280,6 +296,11 @@
                         <p>Connect with Costa Rican nature at every kilometer of the way. More than just a transfer, this service is a guided experience that transforms each journey into an opportunity to discover, learn, and marvel.</p>
                         <div id="exploration-description" class="hidden-content">
                             <p>From your accommodation to any corner of the country, travel accompanied by a certified bilingual naturalist guide, who turns the journey into part of the destination. We design each trip according to your interests, adjusting routes and stops so you can experience Costa Rica authentically and without haste. Whether to visit national parks, nature reserves, or cultural destinations, we take you safely, comfortably, and with local knowledge.</p>
+                            <p>Service available throughout the country, Certified guide in English and Spanish, Strategic stops for wildlife and flora observation  
+Personalized itinerary according to your needs and interests  
+Ideal for families, photographers, birdwatchers, and curious travelers  
+Your journey begins the moment you get into the vehicle: every kilometer traveled is filled with stories, landscapes, and unexpected encounters with wildlife.  
+Ideal for those seeking more than just arrival, preferring to travel understanding what they see, step by step.</p>
                         </div>
                         <button class="toggle-btn" onclick="toggleContent('exploration-description', this)">Read more</button>
                     </div>
