trabajando en las habladas y distribucion dos

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             - Includes: Transportation (private or collective), bilingual naturalist guide, park entrance, lunch in the forest  
                             - Modality: Regular private, deluxe, or collective (depending on availability)  
                             - Ideal for: Travelers seeking peace, authentic contact with nature, and a distinct experience  
-</p>
+                            </p>
                         
                         </div>
                         <button class="toggle-btn" onclick="toggleContent('monteverde-description', this)">Read more</button>
@@ -214,13 +214,14 @@
                         <div id="birdwatching-description" class="hidden-content">
                             <p>From the misty heights of Monteverde to the lower, wetter forests of the Arenal area, you'll experience diverse habitats that host over 200 bird species. Our expert guides will help you spot and identify various endemic and migratory birds while teaching you about their behaviors and ecological importance.</p>
                             <p>Each area offers us a different community:  
-- Monteverde – cloud forest, birds adapted to cooler altitudes  
-- Transition – rural areas, secondary forests, crop edges  
-- Arenal – wet and rainy forest, birds of warmer climates and dense vegetation  
-This variety of habitats makes it possible to record a great diversity of species in a single day, something that would normally require several destinations.  
-The experience culminates in El Cairo Ecological Park, with a leisurely walk along trails surrounded by living nature, and we conclude with a traditional lunch served in the forest, where even during the meal, winged surprises may continue to appear.  
-Ideal for birdwatchers who want to make the most of their time, connecting different habitats, paths, and skies in a single day.  
-</p>
+                            - Monteverde – cloud forest, birds adapted to cooler altitudes  
+                            - Transition – rural areas, secondary forests, crop edges  
+                            - Arenal – wet and rainy forest, birds of warmer climates and dense vegetation  
+                            This variety of habitats makes it possible to record a great diversity of species in a single day, something that would normally require several destinations.  
+                            The experience culminates in El Cairo Ecological Park, with a leisurely walk along trails surrounded by living nature, and we conclude with a traditional lunch served in the forest, where even during the meal, winged surprises may continue to appear.  
+                            Ideal for birdwatchers who want to make the most of their time, connecting different habitats, paths, and skies in a single day.  
+                            </p>
+                            <p>You'll walk along shaded trails, listening to bird songs and enjoy a typical Costa Rican lunch in Pueblo Viejo de Arenal. This comprehensive day trip offers the perfect blend of nature exploration, cultural immersion, and adventure activities in one of Costa Rica's most biodiverse regions.</p>
                         </div>
                         <button class="toggle-btn" onclick="toggleContent('birdwatching-description', this)">Read more</button>
                     </div>
