cambio titulo a PuravidaXpeditions

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 </head>
 <body>
     <header class="bg-light p-3">
-        <h1 class="text-center">Driver & Guided Expeditions</h1>
-        <h2 class="text-center" style="color: rgb(89, 89, 114);">Culture & Adventure</h2>
+        <h1 class="text-center">Pura Vida Expeditions Monteverde</h1>
+        <h2 class="text-center" style="color: rgb(89, 89, 114);">Driver & Guided Expeditions</h2>
+        <h3 class="text-center" style="color: rgb(89, 89, 114);">Culture & Adventure</h3>
         <nav>
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a class="nav-link" href="#services" aria-label="Services Section">Services</a></li>
@@ -391,7 +392,7 @@ Ideal for those seeking more than just arrival, preferring to travel understandi
 
     <footer class="footer text-center py-4">
         <div class="container">
-            <p class="m-0 small text-muted">Copyright &copy; 2025 Transport And Guided Expeditions Costa Rica</p>
+            <p class="m-0 small text-muted">Copyright &copy; 2025 puravidaxpeditions.com</p>
             <p class="m-0 small text-muted">PowerBy: allensuarez.com</p>
         </div>
     </footer>
