--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-    <header class="bg-success py-3">
+    <header class="bg-light py-3">
         <div class="container">
         <h1 class="text-center">Pura Vida Expeditions Monteverde</h1>
         <h2 class="text-center" style="color: rgb(89, 89, 114);">Driver & Guided Expeditions</h2>
@@ -52,6 +52,7 @@
                 <li>Customized expedition planning</li>
                 <li>Safety equipment and training</li>
                 <li>Professionally certified drivers and guides</li>
+                <li>You can count on a driver for your rental car trip. We offer experience and professionalism.</li>
             </ul>
         </section>
         
@@ -235,7 +236,8 @@
             <div class="card mb-4" style="background-image: url('static/assets/img/FortunaVolcanVertical_1079x1026.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; position: relative;">
                 <div style="background-color: rgba(255, 255, 255, 0.9); position: relative; z-index: 1;">
                     <div class="card-body text-dark"> 
-                        <h5 class="card-title text-center mb-4">Monteverde Shuttle</h5> 
+                        <h5 class="card-title text-center mb-4">Monteverde Shuttle</h5>
+                        <p class="text-center">The prices shown here apply to up to 5 people, then the charge is 38.20 per additional person</p> 
                         <div class="row g-4"> 
                             <div class="col-md-6"> 
                                 <div class="card h-100"> 
