modificando los paquetes a dos

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                     <div class="carousel-item">
                         <img src="static/assets/img/bg_1079x1026.jpg" class="d-block w-100" alt="Birdwatching expedition vehicle">
                         <div class="carousel-caption d-block d-md-block">
-                            <h5>Birdwatching Expedition to El Cairo Park</h5>
+                            <h5>Birdwatching Expedition</h5>
                             <br>
                             <a href="#birdwatching-expedition" class="btn btn-primary">See details!</a>
                         </div>
