--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <div class="card mb-4" style="background-image: url('static/assets/img/FortunaVolcanVertical_1079x1026.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; position: relative;">
                 <div style="background-color: rgba(255, 255, 255, 0.9); position: relative; z-index: 1;">
                     <div class="card-body text-dark"> 
-                        <h5 class="card-title text-center mb-4">Monteverde Shuttle</h5>
+                        <h5 class="card-title text-center mb-4">We Offer Monteverde Shuttle</h5>
                         <p class="text-center">The prices shown here apply to up to 5 people, then the charge is 38.20 per additional person</p> 
                         <div class="row g-4"> 
                             <div class="col-md-6"> 
@@ -254,6 +254,9 @@
                                         <h5 class="card-title">El Tigre Waterfalls</h5> 
                                         <p class="card-text">$20</p> 
                                     </div> 
+                                    <div class="card-footer text-center"> 
+                                        <a href="https://api.whatsapp.com/send?phone=50661213404&text=I'm%20interested%20in%20transport%20to%20Monteverde%20attractions" class="btn btn-primary" target="_blank" rel="noopener noreferrer">book</a>
+                                    </div>  
                                 </div> 
                             </div> 
                             <div class="col-md-6"> 
@@ -390,9 +393,7 @@
                             <ul class="feature-list text-white">
                                 <li>Expert birding guide</li>
                                 <li>Transportation</li>
-                                <li>Lunch</li>
-                                <li>Park entrance fees</li>
-                                <li>Photography tips</li>
+                                <li>Lunch</li>  
                             </ul>
                             
                             <div class="text-center mt-4">
