--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="static/assets/img/montview_1079x1026.jpg" class="d-block w-100" alt="Costa Rica landscape">
+                        <img src="static/assets/img/montview.jpg" class="d-block w-100" alt="Costa Rica landscape">
                         <div class="carousel-caption d-block d-md-block">
                             <h5>Exploration at Your Own Pace</h5>
                             <br>
@@ -308,7 +308,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="static/assets/img/bg_1079x1026.jpg" class="d-block w-100" alt="Birdwatching expedition vehicle">
+                        <img src="static/assets/img/MotMot.jpeg" class="d-block w-100" alt="Birdwatching expedition vehicle">
                         <div class="carousel-caption d-block d-md-block">
                             <h5>Birdwatching Expedition</h5>
                             <br>
