cambio foto denuevo a formato grande en packages y actualizo habladas

--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
             <h2>Our Services</h2>
             <p>We offer bilingual transport and expedition guiding services to ensure you have the best experience exploring the great outdoors.</p>
             <ul>
-                <li>Enjoy the views, relax and sit back!</li>
                 <li>Transportation to various expedition locations</li>
                 <li>Bilingual guides fluent in English and Spanish</li>
                 <li>Customized expedition planning</li>
                 <li>Safety equipment and training</li>
                 <li>Professionally certified drivers and guides</li>
-                <li>You can book a professional driver for your car</li>
+                <li>Book a professional driver for your car</li>
             </ul>
         </section>
         
@@ -300,7 +299,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="static/assets/img/montview.jpg" class="d-block w-100" alt="Costa Rica landscape">
+                        <img src="static/assets/img/montview_1079x1026.jpg" class="d-block w-100" alt="Costa Rica landscape">
                         <div class="carousel-caption d-block d-md-block">
                             <h5>Exploration at Your Own Pace</h5>
                             <br>
