coloco el email funcionamiento

--- a/index.html
+++ b/index.html
@@ -492,15 +492,22 @@ Ideal for those seeking more than just arrival, preferring to travel understandi
             <h2>Contact Us</h2>
             <p>If you have any questions or would like to book a service, please reach out to us!</p>
             <div class="mt-3">
-                <a href="mailto:info@costaricaexpeditions.com" class="btn btn-info" aria-label="Send Email">
+                <div class="mt-3">
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=Puravidaxpedions@gmail.com&su=Service Inquiry" 
+                target="_blank" 
+                rel="noopener noreferrer" 
+                class="btn btn-info" 
+                aria-label="Send Email via Gmail">
                     <i class="fas fa-envelope"></i> Send Email
-                </a> 
+                </a>
+            </div>
                 <br><br>
                 <a href="https://api.whatsapp.com/send?phone=50661213404" class="btn btn-success" target="_blank" rel="noopener noreferrer" aria-label="Contact on WhatsApp">
                     <i class="fab fa-whatsapp"></i> Contact on WhatsApp
                 </a>
             </div>
         </section>
+        
     </main>
 
     <footer class="footer text-center py-4">
