--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <li class="nav-item"><a class="nav-link" href="#about" aria-label="About Us Section">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact" aria-label="Contact Us Section">Contact Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="#packages" aria-label="Packages Section">Packages</a></li>
-                <li class="nav-item"><a class="nav-link" href="#fromMonteverde" aria-label="Packages Section">Popular Destinations</a></li>
-                <li class="nav-item"><a class="nav-link" href="#comments" aria-label="Packages Section">Comments</a></li>
+                <li class="nav-item"><a class="nav-link" href="#fromMonteverde" aria-label="Popular Destinations Section">Popular Destinations</a></li>
+                <li class="nav-item"><a class="nav-link" href="#comments" aria-label="Comments Section">Comments</a></li>
             </ul>
         </nav>
     </header>
